# E-com-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
agent/: __init__.py  config.py  main_agent.py  saf3ai_setup.py  security.py  settings.py
api/: server.py
data/: products.json
prompts/: system_prompt.txt
tests/: test_smoke.py
tools/: order_management.py  product_search.py  recommendations.py
